# dropper-detection

./: .gitignore  README.md
detector/: Cargo.toml  report.json
detector/src/: engine.rs  fs_monitor.rs  fs_scan.rs  main.rs  report.rs
web/: Cargo.toml  report.json
web/src/: main.rs
web/templates/: index.hbs
